<resources>
    <string name="app_name">TarotCorp</string>
    <string name="initimage">InitImage</string>
    <string name="ingresar">INGRESAR</string>
    <string name="menu">MENU</string>
    <string name="tirada_clasica">TIRADA CLASICA</string>
    <string name="barajar_cartas">Barajar Cartas</string>
    <string name="go_back">go back</string>
    <string name="el_camino_diario">EL CAMINO DIARIO</string>
    <string name="registro">REGISTRO</string>
    <string name="email">Email</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="tarot_corp">TAROT-CORP</string>
    <string name="carta_del_d_a">Carta del Día</string>
    <string name="tarot_diario">Tarot Diario</string>
</resources>