<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--Titulo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:text="@string/registro"
        android:textSize="150px"
        android:layout_gravity="center|top"
        tools:ignore="PxUsage" />
    <!--Entrada para email-->
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginBottom="275px"
        android:hint="@string/email"
        tools:ignore="Autofill,PxUsage" />

    <!--Entrada para número!-->
    <EditText
        android:id="@+id/Numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_marginTop="170px"
        android:hint="@string/number"
        tools:ignore="Autofill,PxUsage" />
    <!--Entrada para password!-->
    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginTop="-125px"
        android:hint="@string/password"
        tools:ignore="Autofill" />
    <!--Entrada para password!-->
    <EditText
        android:id="@+id/PasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginTop="15px"
        android:hint="@string/password_confirm"
        tools:ignore="Autofill,PxUsage" />
    <!--Boton para registrar-->
    <Button
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="160dp"
        android:background="@drawable/button_rounded"
        android:onClick="registroUsuarios"/>
    <ImageView
        android:id="@+id/goBack1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/goback"
        android:onClick="irAtras"
        android:contentDescription="@string/go_back" />

</FrameLayout>