<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Entrada para email-->
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginBottom="275px"
        android:hint="@string/email"
        tools:ignore="Autofill,PxUsage" />
    <!--Entrada para password!-->
    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginTop="-125px"
        android:hint="@string/password"
        tools:ignore="Autofill" />
    <Button
        android:id="@+id/ingresar"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="255dp"
        android:onClick="registroUsuarios"
        android:text="@string/ingresar"
 />
    <Button
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="195dp"
        android:background="@drawable/button_rounded"
        android:onClick="registroUsuarios"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_gravity="center|top"
        android:text="TAROT-CORP"
        android:textColor="#F44336"
        android:textSize="120px" />

</FrameLayout>