<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lovers">

    <TextView
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginLeft="20dp"
        android:text="@string/tirada_clasica"
        android:textSize="35sp"

        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/barajarCartas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="90dp"
        android:onClick="mostrarImagen"
        android:text="@string/barajar_cartas"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/goBack3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/goback"
        android:onClick="irAtras"
        android:contentDescription="@string/go_back"
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:layout_gravity="left|center"
        android:onClick="mostrarImagen"
        android:visibility="invisible"
        app:srcCompat="@drawable/tapatrasera" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="106dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:onClick="mostrarImagen"
        android:visibility="invisible"
        app:srcCompat="@drawable/tapatrasera" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="107dp"
        android:layout_height="99dp"
        android:layout_gravity="center|right"
        android:onClick="mostrarImagen"
        android:visibility="invisible"
        app:srcCompat="@drawable/tapatrasera" />

</FrameLayout>
